--- a/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Base.lproj/Main.storyboard
@@ -1,13 +1,62 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="EdB-5G-nLG">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Title-->
+        <scene sceneID="uHf-kQ-B0l">
+            <objects>
+                <tableViewController id="ncL-xp-OqN" customClass="ListTableViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="VxK-FP-VzZ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="journalCell" textLabel="mFt-oy-SPE" style="IBUITableViewCellStyleDefault" id="wC8-SO-fbQ">
+                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wC8-SO-fbQ" id="Uzd-SN-9BF">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mFt-oy-SPE">
+                                            <rect key="frame" x="15" y="0.0" width="570" height="43"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" identifier="toDetail" id="KYP-eb-H6g"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="ncL-xp-OqN" id="yUY-4l-ae1"/>
+                            <outlet property="delegate" destination="ncL-xp-OqN" id="tjg-S5-GXp"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Title" id="jbf-sB-Ohi">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="bKI-dd-xoa">
+                            <connections>
+                                <action selector="addButton:" destination="ncL-xp-OqN" id="S5x-5L-a8H"/>
+                                <segue destination="BYZ-38-t0r" kind="show" identifier="toAdd" id="QWo-1X-Ewr"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="C1q-2f-emU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="583" y="456"/>
+        </scene>
+        <!--Title-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="EntryViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +64,66 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="kxC-ju-Ncv">
+                                <rect key="frame" x="54" y="108" width="492" height="440"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JPb-b4-F7U">
+                                <rect key="frame" x="54" y="70" width="492" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="JPb-b4-F7U" firstAttribute="leading" secondItem="kxC-ju-Ncv" secondAttribute="leading" id="FVi-y5-114"/>
+                            <constraint firstItem="JPb-b4-F7U" firstAttribute="trailing" secondItem="kxC-ju-Ncv" secondAttribute="trailing" id="Hd5-rh-kv0"/>
+                            <constraint firstItem="JPb-b4-F7U" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HgX-YT-sQo"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="kxC-ju-Ncv" secondAttribute="bottom" constant="52" id="WZC-KT-jiJ"/>
+                            <constraint firstItem="JPb-b4-F7U" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="34" id="bUa-mO-LBL"/>
+                            <constraint firstItem="kxC-ju-Ncv" firstAttribute="top" secondItem="JPb-b4-F7U" secondAttribute="bottom" constant="8" symbolic="YES" id="c7f-yh-zBP"/>
+                            <constraint firstItem="JPb-b4-F7U" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="6" id="swg-D9-gU8"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Title" id="S3w-7X-BgJ">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="aaa-8P-2kK">
+                            <connections>
+                                <action selector="saveJournal:" destination="BYZ-38-t0r" id="1MS-3B-Q75"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="journalTextField" destination="kxC-ju-Ncv" id="YdK-L2-fcQ"/>
+                        <outlet property="journalTitle" destination="JPb-b4-F7U" id="ph1-MP-JZO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1283" y="456"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="bhb-pZ-ETz">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="EdB-5G-nLG" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Qgl-mm-7gh">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ncL-xp-OqN" kind="relationship" relationship="rootViewController" id="bmx-gZ-Dhp"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cFI-IK-OMQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-110" y="456"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="QWo-1X-Ewr"/>
+    </inferredMetricsTieBreakers>
 </document>
